--- a/web/index.html
+++ b/web/index.html
@@ -25,11 +25,21 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="test_cursor">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#6A0DAD"> <!-- Purple theme -->
+  
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="manifest.json">
 
-  <title>test_cursor</title>
+  <title>Veuolla Birthday Countdown</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
